Add additional styling to better match requirements

--- a/style.css
+++ b/style.css
@@ -15,3 +15,12 @@ h1 {
   border-radius: 25px;
   margin: auto;
 }
+.maindiv > * {
+  padding-bottom: 10px;
+}
+.maindiv > div {
+  margin-left: 10%;
+}
+.highlight {
+  background-color: yellow;
+}
