--- a/style.css
+++ b/style.css
@@ -10,17 +10,23 @@ h1 {
 .maindiv {
   background-color: white;
   color: black;
-  width: 300px;
+  width: 75%;
   padding: 20px;
   border-radius: 25px;
   margin: auto;
 }
-.maindiv > * {
-  padding-bottom: 10px;
+.interest_field_container > * {
+  margin-bottom: 16px;
 }
-.maindiv > div {
-  margin-left: 10%;
-}
+
 .highlight {
   background-color: yellow;
+}
+.interest_field_container {
+  padding-left: 10%;
+  padding-right: 10%;
+}
+label {
+  display: inline-block;
+  width: 100px;
 }
